Make expand/collapse buttons images - so that it doesn't show on print or screen readers - margins fixed - copy changed

--- a/assets/scss/elements/_show-hide.scss
+++ b/assets/scss/elements/_show-hide.scss
@@ -3,5 +3,26 @@ $component: ShowHide;
 .#{$component} {
 
   cursor: pointer;
+  background-image: url(../images/collapse-button.png);
+  background-repeat: no-repeat;
+  padding-left: 30px;
+
+  @media only screen and (-webkit-min-device-pixel-ratio: 2),
+  only screen and (min-device-pixel-ratio: 2) {
+    background-image: url(../images/collapse-button@2x.png);
+    background-size: 25px 25px;
+  }
+
+  &.#{$component}-hidden {
+    background-image: url(../images/expand-button.png);
+
+    @media only screen and (-webkit-min-device-pixel-ratio: 2),
+    only screen and (min-device-pixel-ratio: 2) {
+      background-image: url(../images/expand-button@2x.png);
+      background-size: 25px 25px;
+    }
+
+
+  }
 
 }
